# stksynth

./: .gitignore  CMakeLists.txt
examples/: eulerbell.txt  eulerbell2.txt  eulerbell3.txt  glassy.txt  strings.txt
src/: .Synth.cpp.swp  .Synth.h.swp  .Voice.h.swp  .stksynth.cpp.swp  AbstractReverberator.cpp  AbstractReverberator.h  AdditiveVoice.cpp  AdditiveVoice.h  CMakeLists.txt  Config.cpp  Config.h  LowpassFilter.cpp  LowpassFilter.h  NoiseVoice.cpp  NoiseVoice.h  OvertoneVoice.cpp  OvertoneVoice.h  ReverberatorFreeVerb.cpp  ReverberatorFreeVerb.h  ReverberatorJCRev.cpp  ReverberatorJCRev.h  ReverberatorNRev.cpp  ReverberatorNRev.h  ReverberatorPRCRev.cpp  ReverberatorPRCRev.h  SampleVoice.cpp  SampleVoice.h  Sampler.cpp  Sampler.h  SimpleSampleVoice.cpp  SimpleSampleVoice.h  Synth.cpp  Synth.h  Voice.cpp  Voice.h  const.h  stksynth.cpp  stksynthConfig.h.in  utils.cpp  utils.h
test/: CMakeLists.txt  test.cpp
